chore(core): remove most of compilation warning